--- a/style.css
+++ b/style.css
@@ -12,3 +12,14 @@ body {
 	margin-top: 7px;
     vertical-align:middle;
 }
+
+ .boton{
+        font-size:10px;
+        font-family:Verdana,Helvetica;
+        font-weight:bold;
+        color:white;
+        background:#638cb5;
+        border:0px;
+        width:80px;
+        height:19px;
+       }
