--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 /*Esta es mi hoja de Estilos*/
 body {
   font-size: 20px;
-  background: #00FF00;
+  background: peru;
+  font-family: Verdana,Helvetica;
 }
 
 .row {
